# oberoon

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Pipfile  README.md  app.py  conftest.py  main.py  middleware.py  pyproject.toml  requirements.txt  response.py  setup.py  test_app.py
.github/workflows/: ci.yaml  publish.yml
docs/: PLAN.md  PLAN_ASGI.md  REPORT.md  ROUTING.md  ROUTING2.md
examples/: initial.py
examples/bookstore/: app.py  db.py  errors.py  models.py
examples/bookstore/routes/: __init__.py  books.py  reviews.py
examples/routers/: __init__.py  users.py
experiments/: asgi_bare_bone.py
experiments/regex/: exercises.md
oberoon/: __init__.py  app.py  core.py  exceptions.py  logging.py  middleware.py  models.py  params.py  routing.py  serialization.py
oberoon/requests/: params.py  request.py
oberoon/responses/: __init__.py  response.py
oberoon/routing/: __init__.py  dtos.py  regex.py  routing.py
static/: home.css
templates/: home.html  test.html
tests/: conftest.py  test_app.py  test_core.py  test_exception_handlers.py  test_header_params.py  test_nested_router.py  test_query_params.py  test_request.py  test_response.py  test_router.py  test_routing.py  test_serialization.py
