[project]
name = "oberoon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.1",
    "jinja2>=3.1.6",
    "msgspec>=0.20.0",
]

[dependency-groups]
dev = [
    "anyio[trio]>=4.12.1",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=8.3.2",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=5.0.0",
    "ty>=0.0.21",
    "uvicorn>=0.41.0",
]
