[project]
name = "oberoon"
version = "0.1.3"
description = "A lightweight ASGI web framework for Python, inspired by Starlette"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Samandar-Komilov", email = "voidpointer07@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["anyio>=4.12.1", "jinja2>=3.1.6", "msgspec>=0.20.0"]
keywords = ["asgi", "wsgi", "framework"]

[dependency-groups]
dev = [
    "anyio[trio]>=4.12.1",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=8.3.2",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=5.0.0",
    "ty>=0.0.21",
    "uvicorn>=0.41.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: ASGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Frameworks",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/vpcraft/flowsurgeon"
Repository = "https://github.com/vpcraft/flowsurgeon"
Issues = "https://github.com/vpcraft/flowsurgeon/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
